--- a/committee.html
+++ b/committee.html
@@ -9,17 +9,17 @@ keyword: nanobio sensors, self-assembly, nanobiomechanics, nanobiomedicine, drug
   <div class="unit-spacer content">
     <p class="body">The Scientific Committee list is currently being updated. We appreciate your patience!</p>
 
-    <!-- <p class="bold">Scientific Committee Members:<p>
+    <p class="bold">Scientific Committee Members:<p>
 
     <p class="body"><b>Dr. Alena Čejková,</b> University of Chemistry and Technology Prague, Czech Republic</p>
-    <p class="body"><b>Dr. C. Charitidis,</b> National Technical University of Athens, Greece</p>
+    <!-- <p class="body"><b>Dr. C. Charitidis,</b> National Technical University of Athens, Greece</p>
     <p class="body"><b>Dr. Peng Chen,</b> NTU, Singapore</p>
     <p class="body"><b>Prof. Amanda Ellis,</b> Flinders University, Australia</p>
-    <p class="body"><b>Dr. Zafer Evis,</b> Middle East Technical University, Turkey</p>
+    <p class="body"><b>Dr. Zafer Evis,</b> Middle East Technical University, Turkey</p> -->
     <p class="body"><b>Dr. Dongyang Li,</b> University of Alberta, Canada</p>
-    <p class="body"><b>Dr. Eva-Kathrin Sinner,</b> University of Natural Resources and Life Sciences Vienna, Austria</p>
+   <!--  <p class="body"><b>Dr. Eva-Kathrin Sinner,</b> University of Natural Resources and Life Sciences Vienna, Austria</p> -->
     <p class="body"><b>Dr. Petr Skládal,</b> Masaryk University, Czech Republic</p>
-    <p class="body"><b>Dr. Roderick Slavcev,</b> University of Waterloo, Canada</p>
-    <p class="body"><b>Dr. Ion Tighineanu,</b> Academy of Sciences of Moldova, Moldova</p> -->
+    <!-- <p class="body"><b>Dr. Roderick Slavcev,</b> University of Waterloo, Canada</p> -->
+    <p class="body"><b>Dr. Ion Tighineanu,</b> Academy of Sciences of Moldova, Moldova</p>
   </div>
   </div>
