--- a/dates.html
+++ b/dates.html
@@ -31,7 +31,7 @@ keyword: nanobio sensors, self-assembly, nanobiomechanics, nanobiomedicine, drug
     </tr>
 
     <tr>
-    <td class="date-title">Camera Ready Submission Deadline</td>
+    <td class="date-title">Final Version of Extended Abstract or Paper Submission Deadline</td>
     </tr>
     <tr>
     <td class="imp-date">February 01, 2017</td>
@@ -67,7 +67,7 @@ keyword: nanobio sensors, self-assembly, nanobiomechanics, nanobiomedicine, drug
     </tr>
 
     <tr>
-    <td class="date-title">Camera Ready Submission Deadline
+    <td class="date-title">Final Version of Extended Abstract or Paper Submission Deadline
     <td class="imp-date">February 01, 2017</td>
 </tr>
 <tr>
