--- a/committee.html
+++ b/committee.html
@@ -17,7 +17,7 @@ keyword: nanobio sensors, self-assembly, nanobiomechanics, nanobiomedicine, drug
     <p class="body"><b>Prof. Amanda Ellis,</b> Flinders University, Australia</p>
     <!-- <p class="body"><b>Dr. Zafer Evis,</b> Middle East Technical University, Turkey</p> -->
     <p class="body"><b>Dr. Dongyang Li,</b> University of Alberta, Canada</p>
-   <!--  <p class="body"><b>Dr. Eva-Kathrin Sinner,</b> University of Natural Resources and Life Sciences Vienna, Austria</p> -->
+    <p class="body"><b>Dr. Erik Reimhult,</b> University of Natural Resources and Life Sciences Vienna, Austria</p>
     <p class="body"><b>Dr. Petr Skládal,</b> Masaryk University, Czech Republic</p>
     <!-- <p class="body"><b>Dr. Roderick Slavcev,</b> University of Waterloo, Canada</p> -->
     <p class="body"><b>Dr. Ion Tighineanu,</b> Academy of Sciences of Moldova, Moldova</p>
