--- a/dates.html
+++ b/dates.html
@@ -58,7 +58,7 @@ keyword: nanobio sensors, self-assembly, nanobiomechanics, nanobiomedicine, drug
     <td class="imp-date">April 5 - 6, 2016</td>
 </tr>
     <tr>
-    <td class="date-title"><s>Paper Submission Deadline</s><br><div class="past-text">Final Extended Paper Submission Deadline</div></td>
+    <td class="date-title"><s>Paper Submission Deadline</s><br><div class="past-text">Extended Paper Submission Deadline</div></td>
         <td class="imp-date"><s>October 05, 2016</s><br><strong>December 8, 2016</strong></td>
     </tr>
 <tr>
