--- a/accommodation.html
+++ b/accommodation.html
@@ -6,40 +6,228 @@ title: ICNB'16 - Accommodation
 <a id="top"></a>
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-  <p class="body">We will provide a list of nearby accommodations to the venue soon! Thank you for your patience.</p>
-    <!-- <p class="body">A list of hotels within the walking distance from the conference venue is available below. Please note that the reservations must be made individually directly by either phone or online at a specific hotel. It is suggested that the reservation be made no later than March 1, 2015 as May is the beginning of the tourist season in Ottawa.</p>
+  <!-- p class="body">We will provide a list of nearby accommodations to the venue soon! Thank you for your patience.</p -->
+   <span class="anchor" id="top"></span>
+  <!-- <p class="body">We will provide a list of nearby accommodations to the venue soon! Thank you for your patience.</p> -->
+   
+    <p class="body">We are pleased to announce that the 2<sup>nd</sup> International Conference on Nanomedicine, Drug Delivery, and Tissue Engineering (NDDTE'17) will be held at the Alimara Hotel Barcelona. <!-- More importantly, we have collaborated with the hotel to offer our customers a reduced rate on the accommodations! Please click here for more information: Hotel Alimara Barcelona --></p>
+
+    <p class="body">A list of hotels within the walking distance from the conference venue is available below. <i>Please note that the reservations must be made individually directly by either phone or online at a specific hotel.</i> We suggest to make your reservations as early as possible to get the best discount and to avoid any toursit rush.</p>
 
 <table class="accommodation">
-	<thead>
+  <thead>
     <tr>
     <td><b>Hotels</b></td>
     <td><b>Google Map Direction</b></td>
-    <td><b>Walking Distance</b></td>
+    <td><b>Driving Distance</b></td>
     </tr>
-   	</thead>
-   	<tbody>
-	<tr>
-    <td><a href="#UofOttawa" class="body-link">Campus of University of Ottawa</a></td>
-    	<td>-</td>
-    	<td>-</td>
+    </thead>
+    <tbody>
+  <tr>
+    <td><a href="#Hotel Alimara Barcelona" class="body-link">Hotel Alimara Barcelona</a></td>
+      <td>-</td>
+      <td>-</td>
     </tr>
-</tbody>
+
+    <tr>
+    <td><a href="#Colors" class="body-link">Colors</a></td>
+      <td><a href="https://goo.gl/maps/taQi5FNzm572" class="body-link" target="_blank">https://goo.gl/maps/taQi5FNzm572</a></td>
+      <td>4 mins</td>
+    </tr>
+
+    <tr>
+    <td><a href="#Catalonia Park Güell" class="body-link">Catalonia Park Güell</a></td>
+      <td><a href="https://goo.gl/maps/1i9Hgui19jA2" class="body-link" target="_blank">https://goo.gl/maps/1i9Hgui19jA2</a></td>
+      <td>9 mins</td>
+    </tr>
+
+    <tr>
+    <td><a href="#ILUNION Bel Art" class="body-link">ILUNION Bel Art</a></td>
+      <td><a href="https://goo.gl/maps/uFyEsytLbhG2" class="body-link" target="_blank">https://goo.gl/maps/uFyEsytLbhG2</a></td>
+      <td>10 mins</td>
+    </tr>
+
+    <tr>
+    <td><a href="#Bertran Aparthotel" class="body-link">Bertran Aparthotel</a></td>
+      <td><a href="https://goo.gl/maps/F7TZ4qoXQxw" class="body-link" target="_blank">https://goo.gl/maps/F7TZ4qoXQxw</a></td>
+      <td>11 mins</td>
+    </tr>
+
+    <tr>
+    <td><a href="#ABaC Restaurant & Hotel 5* GL" class="body-link">ABaC Restaurant & Hotel 5* GL</a></td>
+      <td><a href="https://goo.gl/maps/p5Rk9UN43Hz" class="body-link" target="_blank">https://goo.gl/maps/p5Rk9UN43Hz</a></td>
+      <td>11 mins</td>
+    </tr>
+
+    <tr>
+    <td><a href="#Eric Vökel Industria Suites" class="body-link">Eric Vökel Industria Suites</a></td>
+      <td><a href="https://goo.gl/maps/Dr9mxzngAJ92" class="body-link" target="_blank">https://goo.gl/maps/Dr9mxzngAJ92</a></td>
+      <td>11 mins</td>
+    </tr>
+
+    <tr>
+    <td><a href="#Gran Hotel La Florida" class="body-link">Gran Hotel La Florida</a></td>
+      <td><a href="https://goo.gl/maps/skB8F7xSPAS2" class="body-link" target="_blank">https://goo.gl/maps/skB8F7xSPAS2</a></td>
+      <td>16 mins</td>
+    </tr>
+
+    <tr>
+    <td><a href="#Catalonia Barcelona 505" class="body-link">Catalonia Barcelona 505</a></td>
+      <td><a href="https://goo.gl/maps/6bWZNNigXVm" class="body-link" target="_blank">https://goo.gl/maps/6bWZNNigXVm</a></td>
+      <td>18 mins</td>
+    </tr>
+
+    <tr>
+    <td><a href="#H10 Casanova" class="body-link">H10 Casanova</a></td>
+      <td><a href="https://goo.gl/maps/unEvg6SqUoM2" class="body-link" target="_blank">https://goo.gl/maps/unEvg6SqUoM2</a></td>
+      <td>21 mins</td>
+    </tr>
+
+  </tbody>
 </table><br>
 
-<div class="bottom-border" id="UofOttawa">
-<p class="body bold">Campus of University of Ottawa: </p>
-<p class="body"><b>Address:</b> 90 University Street, Ottawa, Ontario, Canada, K1N 1H3.</p>
+<span class="anchor" id="Hotel Alimara Barcelona"></span>
+<div class="bottom-border">
+<p class="body bold">Hotel Alimara Barcelona | 4 Stars</p>
+<p class="body"><b>Address:</b> Carrer de Berruguete, 126, 08035 Barcelona, Spain</p>
 
-<p class="body">For making reservations, please call: +1-613-564-5400 or visit:</p>
+<p class="body">For making reservations, please call: +34 93 427 00 00<br>
+<!-- <b>Group Discount:</b> Mention the conference to receive a Clarion discount. --></p>
 
-<a href="https://www.aborg.net/~ottawarw/cgi-bin/ccsubmit.pl" class="body-link">www.aborg.net/~ottawarw/cgi-bin/ccsubmit.pl</a><br><br>
+<!-- <p class="body"><b>To reserve a room with a discounted price:</b> please download and fill out the <a href="../Clarion_Form.doc" class="body-link">Booking Form</a> and send directly to the hotel email address mentioned on the form.</p> -->
 
-<p class="body">For more information regarding Campus of University of Ottawa residences, please visit the link below:</p>
+<p class="body">For more information regarding the hotel and reservations, please visit the link below:</p>
 
-<a href="http://www.ottawaresidences.com/pdffiles/Summer_Accommodation.pdf" class="body-link">Summer Accommodation</a>
+<a href="http://www.alimarahotel.com/en/home" class="body-link">www.alimarahotel.com</a>
 
 <a href="#top" class="top">TOP</a>
-</div> -->
+</div>
+
+<span class="anchor" id="ABaC Restaurant & Hotel 5* GL"></span>
+<div class="bottom-border">
+<p class="body bold">ABaC Restaurant & Hotel 5* GL | 5 Stars</p>
+<p class="body"><b>Address:</b> Av. del Tibidabo, 1, 08022 Barcelona, Spain</p>
+
+<p class="body">For making reservations, please call: +34 933 19 66 00</p>
+
+<p class="body">For more information regarding the hotel and reservations, please visit the link below:</p>
+
+<a href="http://www.abacbarcelona.com/en" class="body-link">www.abacbarcelona.com</a>
+
+<a href="#top" class="top">TOP</a>
+</div>
+
+<span class="anchor" id="Gran Hotel La Florida"></span>
+<div class="bottom-border">
+<p class="body bold">Gran Hotel La Florida | 5 Stars</p>
+<p class="body"><b>Address:</b> Ctra. de Vallvidrera al Tibidabo, 83-93, 08035 Barcelona, Spain</p>
+
+<p class="body">For making reservations, please call: +34 932 59 30 00</p>
+
+<p class="body">For more information regarding the hotel and reservations, please visit the link below:</p>
+
+<a href="http://www.hotellaflorida.com/en/" class="body-link">www.hotellaflorida.com</a>
+
+<a href="#top" class="top">TOP</a>
+</div>
+
+<span class="anchor" id="ILUNION Bel Art"></span>
+<div class="bottom-border">
+<p class="body bold">ILUNION Bel Art | 4 Stars</p>
+<p class="body"><b>Address:</b> Carrer de Lepant, 406, 08025 Barcelona, Spain</p>
+
+<p class="body">For making reservations, please call: +34 934 33 54 40</p>
+
+<p class="body">For more information regarding the hotel and reservations, please visit the link below:</p>
+
+<a href="http://en.ilunionbelart.com/" class="body-link">www.en.ilunionbelart.com</a>
+
+<a href="#top" class="top">TOP</a>
+</div>
+
+<span class="anchor" id="Catalonia Barcelona 505"></span>
+<div class="bottom-border">
+<p class="body bold">Catalonia Barcelona 505 | 4 Stars</p>
+<p class="body"><b>Address:</b> Carrer de Muntaner, 505, 08022 Barcelona, Spain</p>
+
+<p class="body">For making reservations, please call: +34 932 12 80 12</p>
+
+<p class="body">For more information regarding the hotel and reservations, please visit the link below:</p>
+
+<a href="http://www.hoteles-catalonia.com/es/nuestros_hoteles/europa/espanya/catalunya/barcelona/hotel_catalonia_barcelona_505/index.jsp" class="body-link">www.hoteles-catalonia.com</a>
+
+<a href="#top" class="top">TOP</a>
+</div>
+
+<span class="anchor" id="Eric Vökel Industria Suites"></span>
+<div class="bottom-border">
+<p class="body bold">Eric Vökel Industria Suites | 4 Stars</p>
+<p class="body"><b>Address:</b> Industria, 165, 08025 Barcelona, Spain</p>
+
+<p class="body">For making reservations, please call: +34 934 33 46 31</p>
+
+<p class="body">For more information regarding the hotel and reservations, please visit the link below:</p>
+
+<a href="https://www.ericvokel.com/" class="body-link">www.ericvokel.com</a>
+
+<a href="#top" class="top">TOP</a>
+</div>
+
+<span class="anchor" id="H10 Casanova"></span>
+<div class="bottom-border">
+<p class="body bold">H10 Casanova | 4 Stars</p>
+<p class="body"><b>Address:</b> Gran Via de les Corts Catalanes, 559, 08011 Barcelona, Spain</p>
+
+<p class="body">For making reservations, please call: +34 933 96 48 00</p>
+
+<p class="body">For more information regarding the hotel and reservations, please visit the link below:</p>
+
+<a href="https://www.h10hotels.com/en/barcelona-hotels/h10-casanova" class="body-link">www.h10hotels.com</a>
+
+<a href="#top" class="top">TOP</a>
+</div>
+
+<span class="anchor" id="Catalonia Park Güell"></span>
+<div class="bottom-border">
+<p class="body bold">Catalonia Park Güell | 3 Stars</p>
+<p class="body"><b>Address:</b> Passeig de la Mare de Déu del Coll, 10, 08023 Barcelona, Spain</p>
+
+<p class="body">For making reservations, please call: +34 932 19 12 04</p>
+
+<p class="body">For more information regarding the hotel and reservations, please visit the link below:</p>
+
+<a href="http://www.hoteles-catalonia.com/es/nuestros_hoteles/europa/espanya/catalunya/barcelona/hotel_catalonia_park_guell/index.jsp" class="body-link">www.hoteles-catalonia.com</a>
+
+<a href="#top" class="top">TOP</a>
+</div>
+
+<span class="anchor" id="Bertran Aparthotel"></span>
+<div class="bottom-border">
+<p class="body bold">Bertran Aparthotel | 3 Stars</p>
+<p class="body"><b>Address:</b> Carrer de Bertran, 150, 08022 Barcelona, Spain</p>
+
+<p class="body">For making reservations, please call: +34 932 12 75 50</p>
+
+<p class="body">For more information regarding the hotel and reservations, please visit the link below:</p>
+
+<a href="http://www.aparthotelbertran.com/es/" class="body-link">www.aparthotelbertran.com</a>
+
+<a href="#top" class="top">TOP</a>
+</div>
+
+<span class="anchor" id="Colors"></span>
+<div class="bottom-border">
+<p class="body bold">Colors | 2 Stars</p>
+<p class="body"><b>Address:</b> C/ Campoamor, 79, 08031 Barcelona, Spain</p>
+
+<p class="body">For making reservations, please call: +34 93 274 99 20</p>
+
+<p class="body">For more information regarding the hotel and reservations, please visit the link below:</p>
+
+<a href="http://www.hotelcolors.com/" class="body-link">www.hotelcolors.com</a>
+
+<a href="#top" class="top">TOP</a>
+</div>
 
   </div>
   </div>
