--- a/accommodation.html
+++ b/accommodation.html
@@ -23,7 +23,7 @@ meta: A list of nearby hotels from the venue is provided along with their contac
     </thead>
     <tbody>
   <tr>
-    <td><a href="#Hotel Alimara Barcelona" class="body-link">Hotel Alimara Barcelona</a></td>
+    <td><a href="#Hotel_Alimara_Barcelona" class="body-link">Hotel Alimara Barcelona</a></td>
       <td>-</td>
       <td>-</td>
     </tr>
@@ -85,7 +85,7 @@ meta: A list of nearby hotels from the venue is provided along with their contac
   </tbody>
 </table><br>
 
-<span class="anchor" id="Hotel Alimara Barcelona"></span>
+<span class="anchor" id="Hotel_Alimara_Barcelona"></span>
 <div class="bottom-border">
 <p class="body bold">Hotel Alimara Barcelona | 4 Stars</p>
 <p class="body"><b>Address:</b> Carrer de Berruguete, 126, 08035 Barcelona, Spain</p>
@@ -93,7 +93,7 @@ meta: A list of nearby hotels from the venue is provided along with their contac
 <p class="body">For making reservations, please call: +34 93 427 00 00<br>
 <!-- <b>Group Discount:</b> Mention the conference to receive a Clarion discount. --></p>
 
-<!-- <p class="body"><b>To reserve a room with a discounted price:</b> please download and fill out the <a href="../Clarion_Form.doc" class="body-link">Booking Form</a> and send directly to the hotel email address mentioned on the form.</p> -->
+<p class="body"><b>To reserve a room with a <i>discounted price</i>:</b> please fill out the provided booking form here: <a href="https://form.jotformeu.com/50672415846358" class="body-link">Booking Form</a>.</p>
 
 <p class="body">For more information regarding the hotel and reservations, please visit the link below:</p>
 
