--- a/dates.html
+++ b/dates.html
@@ -9,28 +9,28 @@ meta: The important dates, such as deadlines and registration dates, are provide
     <p class="body">The important dates and deadlines for the 2<su[?nd</sup> International Conference on Nanobiotechnology (ICNB'17) are as follows:</p>
 
 <div class="mobile">
-    <table>
+     <table>
     <tr>
     <td class="date-title">Conference Dates</td>
     </tr>
     <tr>
-        <td class="imp-date">April 4 - 6, 2016</td>
+        <td class="imp-date">April 4 - 6, 2017</td>
     </tr>
     <tr>
-     <td class="date-title"><s>Paper Submission Deadline</s><br><strong>Extended Paper Submission Deadline</strong></td>
+    <td class="date-title"><s>Paper Submission Deadline</s><br><strong>Final Extended Paper Submission Deadline</strong></td>
     </tr>
     <tr>
-        <td class="imp-date"><s>October 05, 2016</s><p class="body"><strong>December 8, 2016</strong></p></td>
+        <td class="imp-date"><s>October 05, 2016</s><p class="body"><strong>January 27, 2017</strong></p></td>
     </tr>
 
-<td class="date-title"><s>Notification of Authors</s><br><strong>Extended Notification of Authors</strong></td>
+<td class="date-title"><s>Notification of Authors</s><br><strong>Final Extended Notification of Authors</strong></td>
     </tr>
     <tr>
-        <td class="imp-date"><s>December 10, 2016</s><p class="body"><strong>January 20, 2017</strong></p></td>
+        <td class="imp-date"><s>December 10, 2016</s><p class="body"><strong>February 5, 2017</strong></p></td>
     </tr>
 
     <tr>
-    <td class="date-title"><s>Final Version of Extended Abstract or Paper Submission Deadline</s><br><strong>Extended Final Version of Extended Abstract or Paper Submission Deadline</strong</td>
+    <td class="date-title"><s>Camera Ready Submission Deadline</s><br><strong>Final version of Extended Abstract or Full Paper Submission Deadline</strong</td>
     </tr>
     <tr>
     <td class="imp-date"><s>February 01, 2017</s><p class="body"><strong>February 20, 2017</strong></p></td>
@@ -39,13 +39,13 @@ meta: The important dates, such as deadlines and registration dates, are provide
     <td class="date-title" rowspan="3">Registration Deadline</td>
     </tr>
     <tr>
-    <td class="reg"><s>Early Bird Registration</s><br><b>Extended Early Bird Registration</b><p class="body"><s>January 10, 2017</s><br><strong>February 1, 2017</strong></p></td>
+    <td class="reg"><s>Early Bird Registration</s><br><b>Final Extended Early Bird Registration</b><p class="body"><s>January 10, 2017</s><br><strong>February 10, 2017</strong></p></td>
     </tr>
     <tr>
-        <td class="reg"><s>Regular Registration*</s><br><b>Extended Regular Registration</b><p class="body">February 10, 2017</s><br><strong>Februaru 25, 2017</strong></p></td>
+        <td class="reg"><s>Regular Registration*</s><br><b>Final Extended Regular Registration</b><p class="body">February 10, 2017</s><br><strong>March 3, 2017</strong></p></td>
     </tr>
     <tr>
-        <td class="reg">Late Registration <p class="body">After February 25, 2017</p></td>
+        <td class="reg">Late Registration <p class="body">After March 3, 2017</p></td>
     </tr>
 </table>
 </div>
@@ -54,30 +54,30 @@ meta: The important dates, such as deadlines and registration dates, are provide
     <table>
     <tr>
     <td class="date-title">Conference Dates</td>
-    <td class="imp-date">April 4 - 6, 2016</td>
+    <td class="imp-date">April 4 - 6, 2017</td>
 </tr>
     <tr>
-    <td class="date-title"><s>Paper Submission Deadline</s><br><div class="past-text">Extended Paper Submission Deadline</div></td>
-        <td class="imp-date"><s>October 05, 2016</s><br><strong>December 8, 2016</strong></td>
+    <td class="date-title"><s>Paper Submission Deadline</s><br><div class="past-text">Final Extended Paper Submission Deadline</div></td>
+        <td class="imp-date"><s>October 05, 2016</s><br><strong>January 27, 2017</strong></td>
     </tr>
 <tr>
-    <td class="date-title"><s>Notification of Authors</s><br><div class="past-text">Extended Notification of Authors</div></td>
-        <td class="imp-date"><s>December 10, 2016</s><br><strong>January 20, 2017</strong></td>
+    <td class="date-title"><s>Notification of Authors</s><br><div class="past-text">Final Extended Notification of Authors</div></td>
+        <td class="imp-date"><s>December 10, 2016</s><br><strong>February 5, 2017</strong></td>
     </tr>
 
     <tr>
-    <td class="date-title"><s>Final Version of Extended Abstract or Paper Submission Deadline</s><br><div class="past-text">Extended Final Version of Extended Abstract or Paper Submission Deadline</div></td>
+    <td class="date-title"><s>Camera Ready Submission Deadline</s><br><div class="past-text">Final version of Extended Abstract or Full Paper Submission Deadline</div></td>
     <td class="imp-date"><s>February 01, 2017</s><br><strong>February 20, 2017</strong></td>
 </tr>
 <tr>
     <th class="date-title" rowspan=3>Registration Deadline</th>
-    <td class="reg"><s>Early Bird Registration</s><div class="past-text">Extended Early Bird Registration</div><p class="body"><s>January 10, 2017</s><br><strong>February 1, 2017</strong></p></td>
+    <td class="reg"><s>Early Bird Registration</s><div class="past-text">Final Extended Early Bird Registration</div><p class="body"><s>January 10, 2017</s><br><strong>February 10, 2017</strong></p></td>
 </tr>
 <tr>
-        <td class="reg"><s>Regular Registration*</s><div class="past-text">Extended Regular Registration*</div><p class="body"><s>February 10, 2017</s><br><strong>February 25, 2017</strong></p></td>
+        <td class="reg"><s>Regular Registration*</s><div class="past-text">Final Extended Regular Registration*</div><p class="body"><s>February 10, 2017</s><br><strong>March 3, 2017</strong></p></td>
     </tr>
     <tr>
-        <td class="reg">Late Registration <br><p class="body">After February 25, 2017</p></td>
+        <td class="reg">Late Registration <br><p class="body">After March 3, 2017</p></td>
     </tr>
 </table>
 </div>
