--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@ meta: 2nd International Conference on Nanobiotechnology (ICNB'17).
 
 	<p class="body"><b>ICNB</b> is an acronym for <B>I</b>nternational <b>C</b>onference on <b>N</b>anobiotechnology.</p>
 
-	<p class="body">To view ICNB'16 website, please visit: <a href="http://2016.nbconference.com/" class="body-link">www.2016.nbconference.com</a>.</p>
+	<p class="body">To view the website for the previous event in this conference series, please visit: <a href="http://2016.nbconference.com/" class="body-link">www.2016.nbconference.com</a>.</p>
+
+<h2>Keynote Speakers:</h2>
+    <center>
+    <div class="unit unit-s-1-2 unit-m-1-2 unit-l-1-2 keynoteIndex">
+      <img src="../img/Baulin.jpg" class="flex-img">
+      <p class="body"><b>Dr. Vladimir A. Baulin,</b><br>Universitat Rovira i Virgili, Spain<br><a href="../keynote#Dr. Baulin" class="body-link">Biography & Abstract</a></p>
+    </div>
+	<br><br>
+  </center>
+
 
 <div class="sponsor">
 	<a href="http://international-aset.com"><img src="../img/int-aset.svg" class="flex-sponsor1"></a><br>
