--- a/keynote.html
+++ b/keynote.html
@@ -6,31 +6,31 @@ meta: The list of keynote speakers who will be presenting their lectures within 
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <p class="body">The keynote information for the 2<sup>nd</sup> International Conference on Nanobiotechnology (ICNB'17) will be announced soon. We appreciate your patience!</p>
+    <!-- <p class="body">The keynote information for the 2<sup>nd</sup> International Conference on Nanobiotechnology (ICNB'17) will be announced soon. We appreciate your patience!</p> -->
 
-    <!-- <p class="body">We are very happy to announce the following keynote speaker for the International Conference on Nanobiotechnology (ICNB'17):</p>
+    <p class="body">We are very happy to announce the following keynote speaker for the International Conference on Nanobiotechnology (ICNB'17):</p>
 
     <div class="keynotes">
     <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
       <div class="unit-spacer">
-      <a href="#Dr. Petr Skládal">Dr. Petr Skládal</a><br>
-           <p class="body">Masaryk University, Czech Republic</p>
+      <a href="#Dr. Baulin">Dr. Vladimir A. Baulin</a><br>
+           <p class="body">Universitat Rovira i Virgili, Spain</p>
       </div>
     </div>
-  </div> --> <!-- End Keynotes -->
+  </div> <!-- End Keynotes -->
 
-  <!-- <span class="anchor" id="Dr. Petr Skládal"></span>
+  <span class="anchor" id="Dr. Baulin"></span>
   <div class="keynote-info">
-  <p class="bold">Dr. Petr Skládal</p><img src="../img/Skadal.jpg" width="200" align="right" class="keynote-img">
-  <p class="body">Petr Skladal joined Masaryk University in Brno (Czech Republic) in 1988 after receiving the MSc degree, he completed the PhD degree in 1992, and in 1999 he was appointed as the Associated Professor at the Department of Biochemistry where he heads the Laboratory of Biosensors. In 2006, he founded also the Nanobiotechnology Laboratory at the National Center of Biomolecular Research, now providing servisces as Nanobiotechnology Core Facility withing Central European Institute of Technology in Brno. His research interests include bioanalytical application of piezoelectric sensors, development of electrochemical immunosensors and bioaffinity studies using biosensors, applications of nanoparticles in bioanalysis and scanning probe microscopies. Number of scientific papers 120, H-index 33.</p>
+  <p class="bold">Dr. Vladimir A. Baulin</p><img src="../img/Baulin.jpg" width="200" align="right" class="keynote-img">
+  <p class="body">Dr. Vladimir A. Baulin leads a group of <a href="http://vbaulin.softmat.net" target="_blank">Soft Mater Theory</a> at the <i>University Rovira i Virgili, Tarragona, Spain</i> which has strong expertise in theory of polymer physics, soft matter theory and biophysics. He is a Coordinator of EU funded Initial Training Network <a href="http://itn-snal.net" target="_blank">SNAL</a>.</p>
 
-  <p class="keynote-topic"><b>Topic of Keynote:</b> Biosensing with AFM</p>
+  <p class="keynote-topic"><b>Topic of Keynote:</b> Designing Membrane-Active Nanoparticles: What are the Control Parameters?</p>
 
-  <a href="../paper/Keynote - Dr. Skladal.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a>
+  <a href="../paper/Keynote - Dr. Baulin.pdf" class="pdf"><img src="../img/pdf_icon.gif">Keynote Abstract</a>
 
   <div class="top"><a href="#top">top</a></div>
   <div class="border"></div>
-  </div> --> <!-- End Keynote Info -->
+  </div> <!-- End Keynote Info -->
 
   </div>
   </div>
