--- a/committee.html
+++ b/committee.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: ICNB'17 - Scientific Committee
+title: ICNB'18 - Scientific Committee
 meta: The scientific committee members of ICNB.
 ---
 
@@ -8,7 +8,7 @@ meta: The scientific committee members of ICNB.
   <div class="unit-spacer content">
     <p class="body">The Scientific Committee list is currently being updated. We appreciate your patience!</p>
 
-    <p class="bold">Scientific Committee Members:</p><br>
+    <!-- <p class="bold">Scientific Committee Members:</p><br>
 
     <p class="body"><b>Dr. Alena Čejková,</b> University of Chemistry and Technology Prague, Czech Republic</p>
     <p class="body"><b>Dr. Peng Chen,</b> NTU, Singapore</p>
@@ -17,6 +17,6 @@ meta: The scientific committee members of ICNB.
     <p class="body"><b>Dr. Dongyang Li,</b> University of Alberta, Canada</p>
     <p class="body"><b>Dr. Erik Reimhult,</b> University of Natural Resources and Life Sciences Vienna, Austria</p>
     <p class="body"><b>Dr. Petr Skládal,</b> Masaryk University, Czech Republic</p>
-    <p class="body"><b>Dr. Ion Tighineanu,</b> Academy of Sciences of Moldova, Moldova</p>
+    <p class="body"><b>Dr. Ion Tighineanu,</b> Academy of Sciences of Moldova, Moldova</p> -->
   </div>
   </div>
