--- a/events.html
+++ b/events.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: ICNB'17 - Events
+title: ICNB'18 - Events
 meta: Information provided to organize an exhibition or workshop under the umbrella of ICNB.
 ---
 
@@ -28,7 +28,7 @@ meta: Information provided to organize an exhibition or workshop under the umbre
       <p class="body">If you are interested in an exhibit at ICNB, please do not hesitate to contact us at <a href="mailto:info@nbconference.com" class="body-link">info@nbconference.com</a>.</p>
 
       <h3>Workshop</h3>
-      <p class="body">The 2<sup>nd</sup> International Conference on Nanobiotechnology (ICNB'17) invites you to propose a workshop.</p>
+      <p class="body">The 3<sup>rd</sup> International Conference on Nanobiotechnology (ICNB'18) invites you to propose a workshop.</p>
 
       <p class="body">The proposed workshop, if accepted, will be co-located with and under the umbrella of the conference.</p>
 
