--- a/keynote.html
+++ b/keynote.html
@@ -1,14 +1,14 @@
 ---
 layout: default
-title: ICNB'17 - Keynote Speakers
+title: ICNB'18 - Keynote Speakers
 meta: The list of keynote speakers who will be presenting their lectures within the topics of nanobiotechnology at ICNB.
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <!-- <p class="body">The keynote information for the 2<sup>nd</sup> International Conference on Nanobiotechnology (ICNB'17) will be announced soon. We appreciate your patience!</p> -->
+    <p class="body">The keynote information for the 3<sup>rd</sup> International Conference on Nanobiotechnology (ICNB'18) will be announced soon. We appreciate your patience!</p>
 
-    <p class="body">We are very happy to announce the following keynote speaker for the International Conference on Nanobiotechnology (ICNB'17):</p>
+   <!--  <p class="body">We are very happy to announce the following keynote speaker for the International Conference on Nanobiotechnology (ICNB'18):</p>
 
     <div class="keynotes">
     <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
@@ -17,9 +17,9 @@ meta: The list of keynote speakers who will be presenting their lectures within 
            <p class="body">Universitat Rovira i Virgili, Spain</p>
       </div>
     </div>
-  </div> <!-- End Keynotes -->
+  </div> --> <!-- End Keynotes -->
 
-  <span class="anchor" id="Dr. Baulin"></span>
+  <!-- <span class="anchor" id="Dr. Baulin"></span>
   <div class="keynote-info">
   <p class="bold">Dr. Vladimir A. Baulin</p><img src="../img/Baulin.jpg" width="200" align="right" class="keynote-img">
   <p class="body">Dr. Vladimir A. Baulin leads a group of <a href="http://vbaulin.softmat.net" target="_blank">Soft Mater Theory</a> at the <i>University Rovira i Virgili, Tarragona, Spain</i> which has strong expertise in theory of polymer physics, soft matter theory and biophysics. He is a Coordinator of EU funded Initial Training Network <a href="http://itn-snal.net" target="_blank">SNAL</a>.</p>
@@ -30,7 +30,7 @@ meta: The list of keynote speakers who will be presenting their lectures within 
 
   <div class="top"><a href="#top">top</a></div>
   <div class="border"></div>
-  </div> <!-- End Keynote Info -->
+  </div>  --><!-- End Keynote Info -->
 
   </div>
   </div>
