--- a/symposium.html
+++ b/symposium.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: ICNB'17 - Symposium
+title: ICNB'18 - Symposium
 meta: Organize a symposium under the umbrella of the conference!
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-   <p class="body">The 2<sup>nd</sup> International Conference on Nanobiotechnology (ICNB'17) invites you to propose a symposium.</p>
+   <p class="body">The 3<sup>rd</sup> International Conference on Nanobiotechnology (ICNB'18) invites you to propose a symposium.</p>
 
    <p class="body">The proposed symposium, if accepted, will be co-located with and under the umbrella of the conference.</p>
 
