--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: ICNB'17 - 2nd International Conference on Nanobiotechnology
-meta: 2nd International Conference on Nanobiotechnology (ICNB'17).
+title: ICNB'18 - 2nd International Conference on Nanobiotechnology
+meta: 2nd International Conference on Nanobiotechnology (ICNB'18).
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <p class="body">The 2<sup>nd</sup> International Conference on Nanobiotechnology (ICNB'17) aims to become the leading annual conference in fields related to nanobiotechnology. The goal of ICNB'17 is to gather scholars from all over the world to present advances in the relevant fields and to foster an environment conducive to exchanging ideas and information. This conference will also provide an ideal environment to develop new collaborations and meet experts on the fundamentals, applications, and products of the mentioned fields.</p>
+    <p class="body">The 3<sup>rd</sup> International Conference on Nanobiotechnology (ICNB'18) aims to become the leading annual conference in fields related to nanobiotechnology. The goal of ICNB'18 is to gather scholars from all over the world to present advances in the relevant fields and to foster an environment conducive to exchanging ideas and information. This conference will also provide an ideal environment to develop new collaborations and meet experts on the fundamentals, applications, and products of the mentioned fields.</p>
 
     <p class="body">All accepted and presented papers will be published in the conference proceedings, under an ISBN reference in a USB drive. The online version of the proceedings will also be published under an ISSN reference and each paper in the proceedings will be assigned unique DOIs by CrossRef. Furthermore, selected papers from the conference will be submitted for possible publication in the following journals from Avestia Publishing (publication fees may apply):</p>
 
@@ -18,22 +18,20 @@ meta: 2nd International Conference on Nanobiotechnology (ICNB'17).
 
 	<p class="body"><b>ICNB</b> is an acronym for <B>I</b>nternational <b>C</b>onference on <b>N</b>anobiotechnology.</p>
 
-	<p class="body">To view the website for the previous event in this conference series, please visit: <a href="http://2016.nbconference.com/" class="body-link">www.2016.nbconference.com</a>.</p>
+	<p class="body">To view the website for the previous event in this conference series, please visit: <a href="http://2017.nbconference.com/" class="body-link">www.2017.nbconference.com</a>.</p>
 
-<h2>Keynote Speakers:</h2>
+<!-- <h2>Keynote Speakers:</h2>
     <center>
     <div class="unit unit-s-1-2 unit-m-1-2 unit-l-1-2 keynoteIndex">
       <img src="../img/Baulin.jpg" class="flex-img">
       <p class="body"><b>Dr. Vladimir A. Baulin,</b><br>Universitat Rovira i Virgili, Spain<br><a href="../keynote#Dr. Baulin" class="body-link">Biography & Abstract</a></p>
     </div>
 	<br><br>
-  </center>
+  </center> -->
 
 
 <div class="sponsor">
 	<a href="http://international-aset.com"><img src="../img/int-aset.svg" class="flex-sponsor1"></a><br>
-
-<!-- 	<a href=""><img src="img/uottawa.png" class="flex-sponsor"></a> -->
 
 	<a href="http://avestia.com"><img src="../img/avestia.png" class="flex-sponsor"></a>
 </div>
