--- a/sitemap.html
+++ b/sitemap.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: ICNB'17 - Site Map
+title: ICNB'18 - Site Map
 meta: The sitemap of ICNB.
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <p class="body">The sitemap for the 2<sup>nd</sup> International Conference on Nanobiotechnology (ICNB'17) are as follows:</p>
+    <p class="body">The sitemap for the 3<sup>rd</sup> International Conference on Nanobiotechnology (ICNB'18) are as follows:</p>
 
     <ul>
         <li><span><a href="../papers" class="body-link">Paper Submission</a></span></li>
