--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: ICNB'18 - 2nd International Conference on Nanobiotechnology
-meta: 2nd International Conference on Nanobiotechnology (ICNB'18).
+title: ICNB'18 - 3rd International Conference on Nanobiotechnology
+meta: 3rd International Conference on Nanobiotechnology (ICNB'18).
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
