--- a/accommodation.html
+++ b/accommodation.html
@@ -23,7 +23,7 @@ meta: A list of nearby hotels from the venue is provided along with their contac
   </thead>
   <tbody>
   <tr>
-    <td><a href="#0" class="body-link">Hotel Novotel Budapest Centrum</a></td>
+    <td><a href="#Novotel" class="body-link">Hotel Novotel Budapest Centrum</a></td>
       <td>-</td>
       <td>-</td>
   </tr>
@@ -85,7 +85,7 @@ meta: A list of nearby hotels from the venue is provided along with their contac
   </tbody>
 </table><br>
 
-<span class="anchor" id="0"></span>
+<span class="anchor" id="Novotel"></span>
 <div class="bottom-border">
 <p class="body bold">Hotel Novotel Budapest Centrum | 4 Stars</p>
 <p class="body"><b>Address:</b> Budapest, Rákóczi út 43-45, 1088 Hungary</p>
