added flyer and SCM

--- a/committee.html
+++ b/committee.html
@@ -12,6 +12,7 @@ meta: The scientific committee members of ICNB.
 
     <p class="body"><b>Dr. Alena Čejková,</b> University of Chemistry and Technology Prague, Czech Republic</p>
     <p class="body"><b>Dr. Peng Chen,</b> NTU, Singapore</p>
+    <p class="body"><b>Dr. Dongyang Li,</b> University of Alberta, Canada</p>
 
   </div>
   </div>
