--- a/sponsor.html
+++ b/sponsor.html
@@ -6,12 +6,6 @@ meta: All of the sponsors of ICNB is listed here along with sponsorship opportun
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <p class="body">Current Sponsors:</p>
-    <div class="sponsor">
-        <a href="http://international-aset.com"><img src="../img/int-aset.svg" class="flex-sponsor1"></a><br><b>Organizing Sponsor</b><br>
-        
-        <a href="http://avestia.com"><img src="../img/avestia.png" class="flex-sponsor"></a>
-    </div>
 
     <h3>Sponsors</h3>
     <p class="body">There are currently three types of sponsorships available for ICNB'18. All sponsors will be provided an exhibition table at the conference. The opportunities are as followed (prices are in Euros):</p>
@@ -60,6 +54,18 @@ meta: All of the sponsors of ICNB is listed here along with sponsorship opportun
       <p class="body">The exhibit provides a platform for companies and institutions to present their products and distribute brochures and business cards. The exhibit also provides a unique networking opportunity with many experts and researchers in the field of nanobiotechnology.</p>
 
       <p class="body">If you are interested in an exhibit at ICNB, please do not hesitate to contact us at <a href="mailto:info@nbconference.com" class="body-link">info@nbconference.com</a>.</p>
+
+      
+      <h3>Current Sponsors:</h3>
+    <div class="sponsor">
+        <a href="http://international-aset.com" target="_blank"><img src="../img/int-aset.svg" alt="International Academy of Science, Engineering and Technology (International ASET Inc.) " style="max-width:250px; float:left;  padding: 40px 25px 0px 25px;"></a>
+
+        <a href="http://avestia.com" target="_blank"><img src="../img/avestia.png" alt="Avestia Publishing" style="max-width:150px; float:left;  padding: 0px 20px 0px 20px;"></a>
+
+        <a href="http://where2submit.com" target="_blank"><img src="../img/W2S_logo.png" alt="Where2Submit"style="max-width:230px; float:left;  padding: 35px 25px 0px 25px;"></a>
+        <div class="cf"></div>
+    </div>
+
 
   </div>
 </div>
