made more changes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ meta: 3rd International Conference on Nanobiotechnology (ICNB'18).
 
      <br>
     <h2>Paper Topics</h2>
-      <p class="body">ICNNFC'18 is now accepting papers on the following topics.</p>
+      <p class="body">ICNB'18 is now accepting papers on the following topics.</p>
       <ul class="topics">
       <li>Bionanocatalysis</li>
       <li>Gene Delivery Systems</li>
