update website to 2019

--- a/committee.html
+++ b/committee.html
@@ -1,18 +1,20 @@
 ---
 layout: default
-title: ICNB'18 - Scientific Committee
+title: ICNB'19 - Scientific Committee
 meta: The scientific committee members of ICNB.
 ---
 
   <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <p class="body">The Scientific Committee list is currently being updated. We appreciate your patience!</p>
+  
+  <p class="body">We will provide Scientific Committee list soon! Thank you for your patience!.</p> 
+   <!-- <p class="body">The Scientific Committee list is currently being updated. We appreciate your patience!</p>
 
     <p class="bold">Scientific Committee Members:</p><br>
 
     <p class="body"><b>Dr. Alena Čejková,</b> University of Chemistry and Technology Prague, Czech Republic</p>
     <p class="body"><b>Dr. Peng Chen,</b> NTU, Singapore</p>
-    <p class="body"><b>Dr. Dongyang Li,</b> University of Alberta, Canada</p>
+    <p class="body"><b>Dr. Dongyang Li,</b> University of Alberta, Canada</p>-->
 
   </div>
   </div>
