--- a/keynote.html
+++ b/keynote.html
@@ -1,14 +1,14 @@
 ---
 layout: default
-title: ICNB'18 - Keynote Speakers
+title: ICNB'19 - Keynote Speakers
 meta: The list of keynote speakers who will be presenting their lectures within the topics of nanobiotechnology at ICNB.
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <p class="body">The keynote information for the 3<sup>rd</sup> International Conference on Nanobiotechnology (ICNB'18) will be announced soon. We appreciate your patience!</p>
+    <p class="body">The keynote information for the 4<sup>th</sup> International Conference on Nanobiotechnology (ICNB'19) will be announced soon. We appreciate your patience!</p>
 
-   <!--  <p class="body">We are very happy to announce the following keynote speaker for the International Conference on Nanobiotechnology (ICNB'18):</p>
+   <!--  <p class="body">We are very happy to announce the following keynote speaker for the International Conference on Nanobiotechnology (ICNB'19):</p>
 
     <div class="keynotes">
     <div class="unit unit-s-1-1 unit-s-1-2 unit-m-1-2 unit-l-1-2">
