--- a/past-events.html
+++ b/past-events.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: ICNB'18 - Past Events
+title: ICNB'19 - Past Events
 meta: Information about the ICNB'17 Conference.
 ---
 
@@ -8,7 +8,7 @@ meta: Information about the ICNB'17 Conference.
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
 
-    <h3>Past Events</h3>
+   <!-- <h3>Past Events</h3>
     <span class="anchor" id="top"></span>
     <p class="body">The previous event in this conference series, ICNB, was held on April 4 - 6, 2017, in Barcelona, Spain. ICNB is one of the 5 conferences that make up the World Congress on Recent Advances in Nanotechnology (RAN). Our year-long planning and organization of several committees resulted in the congress becoming a major success. Please see below some of the highlights of the event.</p>
     <ul>
@@ -107,7 +107,7 @@ meta: Information about the ICNB'17 Conference.
 
 
     <br><br>
-
+-->
     
   </div>
 </div>
