--- a/symposium.html
+++ b/symposium.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: ICNB'18 - Symposium
+title: ICNB'19 - Symposium
 meta: Organize a symposium under the umbrella of the conference!
 ---
 
@@ -8,7 +8,7 @@ meta: Organize a symposium under the umbrella of the conference!
   <div class="unit-spacer content">
 
   <h3>Symposium</h3>
-   <p class="body">The 3<sup>rd</sup> International Conference on Nanobiotechnology (ICNB'18) invites you to propose a symposium.</p>
+   <p class="body">The 4<sup>th</sup> International Conference on Nanobiotechnology (ICNB'19) invites you to propose a symposium.</p>
 
    <p class="body">The proposed symposium, if accepted, will be co-located with and under the umbrella of the conference.</p>
 
@@ -19,7 +19,7 @@ meta: Organize a symposium under the umbrella of the conference!
    <br><br>
 
     <h3>Workshop</h3>
-      <p class="body">The 3<sup>rd</sup> International Conference on Nanobiotechnology (ICNB'18) invites you to propose a workshop.</p>
+      <p class="body">The 4<sup>th</sup> International Conference on Nanobiotechnology (ICNB'19) invites you to propose a workshop.</p>
 
       <p class="body">The proposed workshop, if accepted, will be co-located with and under the umbrella of the conference.</p>
 
