--- a/accommodation.html
+++ b/accommodation.html
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: ICNB'18 - Accommodation
+title: ICNB'19 - Accommodation
 meta: A list of nearby hotels from the venue is provided along with their contact information.
 ---
 
 <a id="top"></a>
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-  <!-- <p class="body">We will provide a list of nearby accommodations to the venue soon! Thank you for your patience.</p> -->
-
-    <p class="body">We are pleased to announce that the 3<sup>rd</sup> International Conference on Nanobiotechnology (ICNB'18) will be held at the Novotel Budapest Centrum. <!-- More importantly, we have collaborated with the hotel to offer our customers a reduced rate on the accommodations! Please click here for more information: Hotel Alimara Barcelona --></p>
+   <p class="body">We will provide a list of nearby accommodations to the venue soon! Thank you for your patience.</p> 
+<!--
+    <p class="body">We are pleased to announce that the 4<sup>th</sup> International Conference on Nanobiotechnology (ICNB'19) will be held at the Novotel Budapest Centrum.  More importantly, we have collaborated with the hotel to offer our customers a reduced rate on the accommodations! Please click here for more information: Hotel Alimara Barcelona </p>
 
    <p class="body">A list of hotels within the walking distance from the conference venue is available below. Please note that the reservations must be made individually directly by either phone or online at a specific hotel. We suggest to make your reservations as early as possible to get the best discount and to avoid any tourist rush.</p>
 
@@ -227,6 +227,6 @@ meta: A list of nearby hotels from the venue is provided along with their contac
 
 <a href="#top" class="top">TOP</a>
 </div>
-
+		 -->
   </div>
   </div>
