--- a/dates.html
+++ b/dates.html
@@ -1,12 +1,15 @@
 ---
 layout: default
-title: ICNB'18 - Important Dates
+title: ICNB'19 - Important Dates
 meta: The important dates, such as deadlines and registration dates, are provided for ICNB.
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <p class="body">The important dates and deadlines for the 3<sup>rd</sup> International Conference on Nanobiotechnology (ICNB'18) are as follows:</p>
+  
+   <p class="body">We will provide important dates and deadlines soon! Thank you for your patience!.</p>
+  
+   <!-- <p class="body">The important dates and deadlines for the 4<sup>th</sup> International Conference on Nanobiotechnology (ICNB'19) are as follows:</p>
 
 <div class="mobile">
      <table>
@@ -30,7 +33,7 @@ meta: The important dates, such as deadlines and registration dates, are provide
     </tr>
 
     <tr>
-    <td class="date-title"><s>Final Version of Accepted Submissions Deadline</s><br><strong>Final Version of Accepted Submissions Deadline</strong</td>
+    <td class="date-title"><s>Final Version of Accepted Submissions Deadline</s><br><strong>Final Version of Accepted Submissions Deadline</strong></td>
     </tr>
     <tr>
     <td class="imp-date"><s>December 21, 2017</s><p class="body"><strong>March 13, 2018</strong></p></td>
@@ -84,6 +87,6 @@ meta: The important dates, such as deadlines and registration dates, are provide
 </table>
 </div>
 
-<p class="body"><strong>*This is the deadline for the registration of Authors</strong></p>
+<p class="body"><strong>*This is the deadline for the registration of Authors</strong></p>-->
   </div>
   </div>
