--- a/papers.html
+++ b/papers.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: ICNB'18 - Paper Submission
+title: ICNB'19 - Paper Submission
 meta: The list of paper topics that an author can refer to when submitting manuscripts for ICNB. The guidelines for the paper submission is also provided.
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
-    <p class="body">ICNB'18 is now accepting papers on the following topics through its OpenConf system. If you have a paper on an additional topic, please write an email to <a href="mailto:info@nbconference.com" class="body-link">info@nbconference.com</a>. The current topics include but are not limited to:</p>
+    <p class="body">ICNB'19 is now accepting papers on the following topics through its OpenConf system. If you have a paper on an additional topic, please write an email to <a href="mailto:info@nbconference.com" class="body-link">info@nbconference.com</a>. The current topics include but are not limited to:</p>
 
 <ul class="topics">
 <li>Bionanocatalysis</li>
@@ -23,7 +23,7 @@ meta: The list of paper topics that an author can refer to when submitting manus
 <li>And all other related topics</li>
 </ul>
 
-    <p class="body">Manuscripts are invited for the 3<sup>rd</sup> International Conference on Nanobiotechnology (ICNB'18) on topics lying within the scope of the conference. All contributions must be original and should not have been published elsewhere.</p>
+    <p class="body">Manuscripts are invited for the 4<sup>th</sup> International Conference on Nanobiotechnology (ICNB'19) on topics lying within the scope of the conference. All contributions must be original and should not have been published elsewhere.</p>
 
     <p class="body"><i>Three types of manuscripts</i> could be published in the conference proceedings:</p>
 
@@ -45,7 +45,7 @@ meta: The list of paper topics that an author can refer to when submitting manus
 
     <p class="body">Please note that a .docx template is available to guide the authors in formatting their papers. All papers (including extended abstracts) <b>must</b> comply with the template.</p>
 
-    <p class="body">You may find the conference template(s) for ICNB'18 below:</p>
+    <p class="body">You may find the conference template(s) for ICNB'19 below:</p>
 
     <p class="body"><b>Short and Full Papers'</b> Template:</p>
 
