update website to 2019

--- a/past-events.html
+++ b/past-events.html
@@ -7,6 +7,7 @@ meta: Information about the ICNB'17 Conference.
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
+  <p class="body">Information about the last conference in this conference series will be available soon. Thank you for your patience.</p>
 
    <!-- <h3>Past Events</h3>
     <span class="anchor" id="top"></span>
