--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@ meta: 3rd International Conference on Nanobiotechnology (ICNB 2018). This confer
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
   <div class="unit-spacer content">
+    <p class="announcement-text"><strong>Announcement: Due to popular demand, the paper submission deadline has been extended until February 8, 2018</strong></p>
+
     <p class="body"><strong>The 3<sup>rd</sup> International Conference on Nanobiotechnology (ICNB'18) aims to become the leading annual conference in fields related to nanobiotechnology.</strong> The goal of ICNB'18 is to gather scholars from all over the world to present advances in the relevant fields and to foster an environment conducive to exchanging ideas and information. This conference will also provide an ideal environment to develop new collaborations and meet experts on the fundamentals, applications, and products of the mentioned fields.</p>
 
     <p class="body"><b>ICNB</b> is an acronym for <B>I</b>nternational <b>C</b>onference on <b>N</b>anobiotechnology.</p>
