Added committee members

--- a/committee.html
+++ b/committee.html
@@ -9,10 +9,11 @@ meta: The scientific committee members of ICNB.
   
   
   <p class="body">The Scientific Committee list is currently being updated. We appreciate your patience!</p>
- <!-- 
+  
     <p class="bold">Scientific Committee Members:</p><br>
+    <p class="body"><b>Dr. Beata Vertessy,</b> Budapest University of Technology and Economics, Hungary</p>
 
-    <p class="body"><b>Dr. Alena Čejková,</b> University of Chemistry and Technology Prague, Czech Republic</p>
+    <!--<p class="body"><b>Dr. Alena Čejková,</b> University of Chemistry and Technology Prague, Czech Republic</p>
     <p class="body"><b>Dr. Peng Chen,</b> NTU, Singapore</p>
     <p class="body"><b>Dr. Dongyang Li,</b> University of Alberta, Canada</p>-->
 
